# SymDesign

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/symdesign/: __init__.py
src/symdesign/core/: Activation.py  BasePart.py  Designer.py  GlobalCoordinate.py  Material.py  Mission.py  Parts.py  Performance.py  Power.py  __init__.py
src/symdesign/materials/: BallastMaterial.py  BatteryCell.py  BuoyancyMaterial.py  IncompressibleFluid.py  PressureMaterial.py  StructuralMaterial.py  __init__.py
src/symdesign/models/: Energy.py  MaterialUnderPressure.py  Oceanic.py  Packing.py  cfd_surrogate.pt  power_inside_surrogate.pt  power_outside_surrogate.pt
src/symdesign/server/: server.py
src/symdesign/server/endpoints/: Get.py  New.py  (+1 more)
tests/2022-Aug-Hackathon/: design.py  design_walkthrough.py
tests/2022-Aug-Hackathon/bathymetry/: bathymetry_lat60-90.npz
tests/2022-Aug-Hackathon/ocean_currents/: ocean_currents.npz
tests/2022-Aug-Hackathon/oraclescoring/: README.txt  cbcg_over.py  core.py  default.py  deploymentAccuracy.py  deploymentAccuracy21.py  main.py  mass.py  metricsPlugins.json  mission1BCompleted.py  mission1BDuration.py  mission21Completed.py  mission21Duration.py  mission21EnergyReserve.py  mission21PathValid.py  mission21Waypoints.py  nemo.json  oceanBuoyancy.py  pitchRange.py  pvDepthRating.py  pvVm.py  sampleOut.json  volume.py
tests/core/: test_fairing_attachment.py  test_mission.py  test_parts.py
tools/: convert_csv_waypoints.py  convert_str_currents.py  convert_str_waypoints.py  polynomial_fit.py
(+3 files in other folders)
