[metadata]
name = symdesign
provides = symdesign
version = attr: symdesign.__version__
description = A symbolic UUV designer with hooks into SymCAD
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Will Hedgecock
author_email = ronald.w.hedgecock@vanderbilt.edu
maintainer = Will Hedgecock
maintainer_email = ronald.w.hedgecock@vanderbilt.edu
license = GPL 3
license_files = LICENSE
url = https://github.com/SymBench/SymDesign
download_url = https://github.com/SymBench/SymDesign
project_urls =
   Documentation = https://symbench.github.io/SymDesign
   Source = https://github.com/SymBench/SymDesign
   Tracker = https://github.com/SymBench/SymDesign/issues
classifiers =
   Environment :: Console
   Environment :: Other Environment
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Operating System :: POSIX :: Linux
   Operating System :: MacOS :: MacOS X
   Operating System :: Microsoft :: Windows
   Intended Audience :: Science/Research
   Natural Language :: English
platforms = Linux, Darwin, Windows
readme = README.rst

[options]
zip_safe = False
include_package_data = True
package_dir =
   = src
packages = find:
python_requires = >=3.8, <3.11
setup_requires =
   setuptools
   wheel

[options.packages.find]
where = src

[options.package_data]
cadmodels = *.FCStd, *.tar.xz
